--- a/views/activity/new.ejs
+++ b/views/activity/new.ejs
@@ -104,13 +104,13 @@
 
             <div class="form-group">
               <label for="title" class='font-weight-bold'>Input a title</label>
-              <input type="text" class="form-control" id="title" name='title'>
+              <input type="text" class="form-control" id="title" name='title' required>
             </div>
 
             <p class='font-weight-bold'>Upload image</p>
             <div class="input-group mb-3">
               <div class="custom-file">
-                <input type="file" class="custom-file-input" id="customFile" accept="image/*" name="image" >
+                <input type="file" class="custom-file-input" id="customFile" accept="image/*" name="image" required>
                 <label class="custom-file-label" for="customFile">Choose file</label>
               </div>
             </div>
