--- a/views/about/new.ejs
+++ b/views/about/new.ejs
@@ -101,15 +101,16 @@
             <p class='font-weight-bold'>Upload image</p>
             <div class="input-group mb-3">
               <div class="custom-file">
-                <input type="file" class="custom-file-input" id="customFile" accept="image/*" name="image" >
+                <input type="file" class="custom-file-input" id="customFile" accept="image/*" name="image" required>
                 <label class="custom-file-label" for="customFile">Choose file</label>
               </div>
             </div>
 
             <div class="form-group">
                 <label for="newDescription" class="font-weight-bold">Content Put Here</label>
-                <textarea name="content" class="form-control" id="newDescription" required cols="30" rows="10"></textarea>
+                <textarea name="content" class="form-control" id="newDescription" required cols="30" rows="10" required></textarea>
             </div>
+            
             <button type="submit" class="btn btn-primary">Submit</button>
           </form>
         </div>
