--- a/views/tourist/index.ejs
+++ b/views/tourist/index.ejs
@@ -8,9 +8,6 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-    <!-- AOS -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
     <!-- Custom CSS -->
     <link rel='stylesheet' href="/styles/tourist/index.css" >
 
@@ -125,9 +122,9 @@
               <div class="col-12 col-md-6 col-lg-4 justify-content-center align-items-center">
                 <div class="card" style="width: 18rem;">
                   <% if(post.image) { %>
-                    <img src="data:image/<%= post.image[0].contentType%>;base64,<%= post.image[0].data.toString('base64')%>" class="card-img-top" alt="images">
+                    <img src="data:image/<%= post.image[0].contentType%>;base64,<%= post.image[0].data.toString('base64')%>" class="img" alt="images">
                   <% } else{ %>
-                    <img src="/images/emptypic.png" class="card-img-top" alt="images">
+                    <img src="/images/emptypic.png" class="img" alt="images">
                   <% } %>
                   <div class="card-body">
                       <a href='/tourist-attraction/<%=post._id%>'> <h5 class="card-title"> <%= post.title %></h5> </a>
@@ -137,6 +134,11 @@
                 </div>
               </div>
             <% }); %>
+          <% } else { %>
+            <div class="notfound my-3 my-lg-5">
+              <img src="/images/frown.png" alt="frown" class='img1'>
+              <h1 class='text-center'>There are still no posts yet</h1>
+            </div>
           <% } %>
           
         </div>
@@ -184,11 +186,5 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-
-    <!-- AOS -->
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-      AOS.init();
-    </script>
   </body>
 </html>
