--- a/public/styles/gallery/edit.css
+++ b/public/styles/gallery/edit.css
@@ -17,24 +17,24 @@ body {
 	background-color: #e9e4e1 !important;
 }
 
-.navbar .navbar-brand {
+.navbar-brand {
 	color: #7c3c21 !important;
 	font-family: Pacifico, sans-serif;
 	font-size: 35px;
 }
 
-.navbar .nav-link {
+.nav-link {
 	font-size: 16px;
 	margin: 15px;
 	color: black !important;
 	font-family: 'Roboto Condensed', sans-serif;
 }
 
-.navbar .nav-link:hover {
+.nav-link:hover {
 	color: #ee8137 !important;
 }
 
-.navbar .active .nav-link {
+.active .nav-link {
 	color: #ee8137 !important;
 }
 
@@ -52,68 +52,8 @@ body {
 }
 
 /* section 1 */
-.section-1 .img {
-	width: 284px;
-	height: 284px;
-	object-fit: cover;
-	display: block;
-	margin: 0 auto;
-}
-
-.section-1 .notfound .img1 {
-	width: 20%;
-	margin: 0 auto;
-	display: block;
-}
-
-.section-1 .notfound {
-	width: 100%;
-	color: #fbc49c;
-}
-
-.section-1 .card {
-	margin: 2% auto;
-	border: none;
-}
-
-.section-1 .card-title {
-	text-transform: capitalize;
-}
-
-.section-1 .card-text {
-	text-align: justify;
-}
-
-.section-1 .card-body {
-	background: rgba(233, 228, 225, 0.2);
-}
-
-.section-1 #myBtn {
-	position: fixed;
-	bottom: 361px;
-	right: 0;
-	z-index: 99;
-	padding: 10px 40px;
-	border-radius: 0;
-}
-
-.section-1 .category {
-	background-color: #e9e4e1;
-	border-radius: 2px;
-	padding: 5px;
-	text-align: center;
-	text-transform: capitalize;
-	width: 35%;
-	font-size: 12px;
-	margin-bottom: 0;
-}
-
-@media screen and (max-width: 700px) {
-	.section-1 #myBtn {
-		bottom: 20px;
-		right: 30px;
-		padding: 15px;
-	}
+.section-1 {
+	padding: 5% 0;
 }
 
 /* footer */
