--- a/views/gallery/edit.ejs
+++ b/views/gallery/edit.ejs
@@ -8,8 +8,11 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
+    <!-- AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <!-- Custom CSS -->
-    <link rel='stylesheet' href="/styles/tourist/index.css" >
+    <link rel='stylesheet' href="/styles/tourist/edit.css" >
 
     <title>Beautiful Pangalengan</title>
   </head>
@@ -40,20 +43,20 @@
                 <a class="nav-link" href="/gallery">Gallery</a>
               </li>
             </ul>
-            <ul class="navbar-nav">
+            <ul class="navbar-nav justify-content-end">
               <% if(!currentUser) { %>
                 <li class="nav-item">
-                    <a href="/login" class="nav-link">Login</a>
+                  <a href="/login" class="nav-link">Login</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/register" class="nav-link">Register</a>
+                  <a href="/register" class="nav-link">Register</a>
                 </li>
               <% }else{ %>
                 <li class="nav-item">
-                    <a href="/profile/<%= currentUser._id %>" class="nav-link">Signed in As <%= currentUser.username %> </a>
+                  <a href="/profile/<%= currentUser._id %>" class="nav-link">Signed in As <%= currentUser.username %> </a>
                 </li>
                 <li class="nav-item">
-                        <a href="/logout" class="nav-link">Log Out</a>
+                  <a href="/logout" class="nav-link">Log Out</a>
                 </li>
               <% } %>
             </ul>
@@ -67,7 +70,7 @@
         <div class="d-flex justify-content-center">
           <div class="d-flex flex-column align-items-center text-center">
             <h1 class="site-title">
-              Tourist Attraction
+              Editing Gallery's Content
             </h1>
           </div>
         </div>
@@ -95,64 +98,17 @@
         </div>
       <% } %>
 
-      <!-- input ure content -->
-      <div class="navigasi container my-3 my-lg-5">
-        <ul class="nav nav-tabs">
-          <li class="nav-item">
-            <a class="nav-link px-2 px-lg-5" href="/tourist-attraction">All</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link px-2 px-lg-5 active" href="/tourist-attraction/attraction">Attraction</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link px-2 px-lg-5" href="/tourist-attraction/lodging">Lodging</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link px-2 px-lg-5" href="/tourist-attraction/restaurant">Restaurant</a>
-          </li>
-        </ul>
-      </div>
+      <div class="section-1">
+        <div class="container px-5">
+          <form method="POST" action="/gallery/<%= post._id %>?_method=PUT">
 
-      <div class="section-1 container">
-        <a id="myBtn" class= 'btn btn-primary' href='/tourist-attraction/new'>New Post</a>
-        <div class="row justify-content-center align-items-center">
-
-          <% if(posts){ %>
-            <% posts.forEach(post=>{ %>
-              <div class="col-12 col-md-6 col-lg-4 justify-content-center align-self-start mb-3">
-                <div class="card" style="width: 18rem;">
-
-                  <% if(post.image.length>1) { %>
-                    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                      <div class="carousel-inner">
-                        <% for(let x=0;x<post.image.length;x++){ %>
-                          <div class="carousel-item <%= x== 0 ? 'active' : null %>">
-                            <img class='img' src="data:image/<%= post.image[x].contentType%>;base64,<%= post.image[x].data.toString('base64')%>">
-                          </div>
-                        <% } %>
-                      </div>
-                    </div> 
-                  <% } else if (post.image.length == 1){ %>
-                    <img class='img' src="data:image/<%= post.image[0].contentType%>;base64,<%= post.image[0].data.toString('base64')%>">
-                  <% } else { %>
-                    <img src="/images/emptypic.png" class="img" alt="images">
-                  <% } %>
-
-                  <div class="card-body">
-                      <a href='/tourist-attraction/<%=post._id%>'> <h5 class="card-title text-center"> <%= post.title %></h5> </a>
-                      <p class="card-text"><%= post.content.slice(0,150) %> ...</p>
-                      <p class='category'><%= post.category %></p>
-                  </div>
-                </div>
-              </div>
-            <% }); %>
-          <% } else { %>
-            <div class="notfound my-3 my-lg-5">
-              <img src="/images/frown.png" alt="frown" class='img1'>
-              <h1 class='text-center'>There are still no posts yet</h1>
+            <div class="form-group">
+                <label for="newDescription" class="font-weight-bold">Content Put Here</label>
+                <textarea name="content" class="form-control" id="newDescription" required cols="30" rows="10"> <%= post.content %></textarea>
             </div>
-          <% } %>
-          
+
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
         </div>
       </div>
     </main>
@@ -198,10 +154,32 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
     <script>
-      $('.carousel').carousel({
-        interval: 3000
-      })
+      let input = document.getElementById( 'customFile' );
+      let infoArea = document.getElementById( 'customLabel' );
+
+      input.addEventListener( 'change', showFileName );
+
+      function showFileName( event ) {
+        
+        // the change event gives us the input it occurred in 
+        let input = event.srcElement;
+        
+        // the input has an array of files in the `files` property, each one has a name that you can use. We're just using the name here.
+        let fileName = [];
+        for (let x=0;x<input.files.length;x++){
+          fileName.push(input.files[x].name);
+        }
+        
+        // use fileName however fits your app best, i.e. add it into a div
+        infoArea.textContent = fileName.join(', ')
+
+        //alert when file more than 4
+        if(input.files.length>4){
+          alert('You can only upload a maximum of 4 images')
+        }
+      }
     </script>
   </body>
 </html>
