--- a/views/gallery/index.ejs
+++ b/views/gallery/index.ejs
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
     <!-- Custom CSS -->
-    <link rel='stylesheet' href="/styles/tourist/index.css" >
+    <link rel='stylesheet' href="/styles/gallery/index.css" >
 
     <title>Beautiful Pangalengan</title>
   </head>
@@ -33,10 +33,10 @@
               <li class="nav-item">
                 <a class="nav-link" href="/activity">Activity</a>
               </li>
-              <li class="nav-item active">
+              <li class="nav-item">
                 <a class="nav-link" href="/tourist-attraction">Tourist Attraction</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item active">
                 <a class="nav-link" href="/gallery">Gallery</a>
               </li>
             </ul>
@@ -67,28 +67,28 @@
         <div class="d-flex justify-content-center">
           <div class="d-flex flex-column align-items-center text-center">
             <h1 class="site-title">
-              Tourist Attraction
+              Gallery
             </h1>
           </div>
         </div>
       </div>
 
       <% if(success && success.length>0 ){ %>
-        <div class="container my-3">
+        <div class="container mt-3">
           <div class="alert alert-success " role="alert">
               <%= success %>
           </div>
         </div>
       <% } %>
       <% if(warning && warning.length>0){ %>
-        <div class="container my-3">
+        <div class="container mt-3">
           <div class="alert alert-warning " role="alert">
               <%= warning %>
           </div>
         </div>
       <% } %>
       <% if (error && error.length>0){ %>
-        <div class="container my-3">
+        <div class="container mt-3">
           <div class="alert alert-danger " role="alert">
               <%= error %>
           </div>
@@ -96,54 +96,49 @@
       <% } %>
 
       <!-- input ure content -->
-      <div class="navigasi container my-3 my-lg-5">
-        <ul class="nav nav-tabs">
-          <li class="nav-item">
-            <a class="nav-link px-2 px-lg-5" href="/tourist-attraction">All</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link px-2 px-lg-5 active" href="/tourist-attraction/attraction">Attraction</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link px-2 px-lg-5" href="/tourist-attraction/lodging">Lodging</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link px-2 px-lg-5" href="/tourist-attraction/restaurant">Restaurant</a>
-          </li>
-        </ul>
-      </div>
-
       <div class="section-1 container">
-        <a id="myBtn" class= 'btn btn-primary' href='/tourist-attraction/new'>New Post</a>
+        <a id="myBtn" class= 'btn btn-primary' href='/gallery/new'>New Post</a>
         <div class="row justify-content-center align-items-center">
-
+          
           <% if(posts){ %>
             <% posts.forEach(post=>{ %>
-              <div class="col-12 col-md-6 col-lg-4 justify-content-center align-self-start mb-3">
-                <div class="card" style="width: 18rem;">
+              <div class="col-12 col-md-6 col-lg-4 justify-content-center align-items-center">
+                <a class='atag' href="/gallery/<%= post._id %>">
+                  <div class="card" style="width: 18rem;">
 
-                  <% if(post.image.length>1) { %>
-                    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                      <div class="carousel-inner">
-                        <% for(let x=0;x<post.image.length;x++){ %>
-                          <div class="carousel-item <%= x== 0 ? 'active' : null %>">
-                            <img class='img' src="data:image/<%= post.image[x].contentType%>;base64,<%= post.image[x].data.toString('base64')%>">
+                    <% if(post.image) { %>
+                      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner">
+                          <% for(let x=0;x<post.image.length;x++){ %>
+                            <div class="carousel-item <%= x== 0 ? 'active' : null %>">
+                              <img class='img' src="data:image/<%= post.image[x].contentType%>;base64,<%= post.image[x].data.toString('base64')%>">
+                            </div>
+                          <% } %>
+                        </div>
+                      </div> 
+                    <% } else if (post.image.length == 1){ %>
+                      <img class='img' src="data:image/<%= post.image[0].contentType%>;base64,<%= post.image[0].data.toString('base64')%>">
+                    <% } else { %>
+                      <img src="/images/emptypic.png" class="img" alt="images">
+                    <% } %>
+
+                    <div class="card-body">
+                        <p class="card-text"><%= post.content.slice(0,150) %>...</p>
+                        <div class="likes">
+                          <div class="like d-flex flex-row justify-content-start my-3">
+                            <div class="d-flex flex-row align-self-center mx-3">
+                              <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart text-danger" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
+                              </svg>
+                            </div>
+                            <div class="d-flex flex-row align-self-center mx-3">
+                              <p class='m-0'><%= post.like %> likes</p>
+                            </div> 
                           </div>
-                        <% } %>
-                      </div>
-                    </div> 
-                  <% } else if (post.image.length == 1){ %>
-                    <img class='img' src="data:image/<%= post.image[0].contentType%>;base64,<%= post.image[0].data.toString('base64')%>">
-                  <% } else { %>
-                    <img src="/images/emptypic.png" class="img" alt="images">
-                  <% } %>
-
-                  <div class="card-body">
-                      <a href='/tourist-attraction/<%=post._id%>'> <h5 class="card-title text-center"> <%= post.title %></h5> </a>
-                      <p class="card-text"><%= post.content.slice(0,150) %> ...</p>
-                      <p class='category'><%= post.category %></p>
+                        </div>
+                    </div>
                   </div>
-                </div>
+                </a>
               </div>
             <% }); %>
           <% } else { %>
@@ -152,9 +147,10 @@
               <h1 class='text-center'>There are still no posts yet</h1>
             </div>
           <% } %>
-          
+
         </div>
       </div>
+      
     </main>
 
     <footer>
