--- a/views/gallery/show.ejs
+++ b/views/gallery/show.ejs
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
     <!-- Custom CSS -->
-    <link rel='stylesheet' href="/styles/tourist/index.css" >
+    <link rel='stylesheet' href="/styles/gallery/show.css" >
 
     <title>Beautiful Pangalengan</title>
   </head>
@@ -33,27 +33,27 @@
               <li class="nav-item">
                 <a class="nav-link" href="/activity">Activity</a>
               </li>
-              <li class="nav-item active">
+              <li class="nav-item">
                 <a class="nav-link" href="/tourist-attraction">Tourist Attraction</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item active">
                 <a class="nav-link" href="/gallery">Gallery</a>
               </li>
             </ul>
-            <ul class="navbar-nav">
+            <ul class="navbar-nav justify-content-end">
               <% if(!currentUser) { %>
                 <li class="nav-item">
-                    <a href="/login" class="nav-link">Login</a>
+                  <a href="/login" class="nav-link">Login</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/register" class="nav-link">Register</a>
+                  <a href="/register" class="nav-link">Register</a>
                 </li>
               <% }else{ %>
                 <li class="nav-item">
-                    <a href="/profile/<%= currentUser._id %>" class="nav-link">Signed in As <%= currentUser.username %> </a>
+                  <a href="/profile/<%= currentUser._id %>" class="nav-link">Signed in As <%= currentUser.username %> </a>
                 </li>
                 <li class="nav-item">
-                        <a href="/logout" class="nav-link">Log Out</a>
+                  <a href="/logout" class="nav-link">Log Out</a>
                 </li>
               <% } %>
             </ul>
@@ -67,7 +67,7 @@
         <div class="d-flex justify-content-center">
           <div class="d-flex flex-column align-items-center text-center">
             <h1 class="site-title">
-              Tourist Attraction
+              Beautiful Pangalengan
             </h1>
           </div>
         </div>
@@ -95,64 +95,84 @@
         </div>
       <% } %>
 
-      <!-- input ure content -->
-      <div class="navigasi container my-3 my-lg-5">
-        <ul class="nav nav-tabs">
-          <li class="nav-item">
-            <a class="nav-link px-2 px-lg-5" href="/tourist-attraction">All</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link px-2 px-lg-5 active" href="/tourist-attraction/attraction">Attraction</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link px-2 px-lg-5" href="/tourist-attraction/lodging">Lodging</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link px-2 px-lg-5" href="/tourist-attraction/restaurant">Restaurant</a>
-          </li>
-        </ul>
-      </div>
+      <div class="section-1">
+        <div class="container">
 
-      <div class="section-1 container">
-        <a id="myBtn" class= 'btn btn-primary' href='/tourist-attraction/new'>New Post</a>
-        <div class="row justify-content-center align-items-center">
+          <% if(post.image.length>1) { %>
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+              <div class="carousel-inner">
 
-          <% if(posts){ %>
-            <% posts.forEach(post=>{ %>
-              <div class="col-12 col-md-6 col-lg-4 justify-content-center align-self-start mb-3">
-                <div class="card" style="width: 18rem;">
-
-                  <% if(post.image.length>1) { %>
-                    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                      <div class="carousel-inner">
-                        <% for(let x=0;x<post.image.length;x++){ %>
-                          <div class="carousel-item <%= x== 0 ? 'active' : null %>">
-                            <img class='img' src="data:image/<%= post.image[x].contentType%>;base64,<%= post.image[x].data.toString('base64')%>">
-                          </div>
-                        <% } %>
-                      </div>
-                    </div> 
-                  <% } else if (post.image.length == 1){ %>
-                    <img class='img' src="data:image/<%= post.image[0].contentType%>;base64,<%= post.image[0].data.toString('base64')%>">
-                  <% } else { %>
-                    <img src="/images/emptypic.png" class="img" alt="images">
-                  <% } %>
-
-                  <div class="card-body">
-                      <a href='/tourist-attraction/<%=post._id%>'> <h5 class="card-title text-center"> <%= post.title %></h5> </a>
-                      <p class="card-text"><%= post.content.slice(0,150) %> ...</p>
-                      <p class='category'><%= post.category %></p>
+                <% for(let x=0;x<post.image.length;x++){ %>
+                  <div class="carousel-item <%= x== 0 ? 'active' : null %>">
+                    <img class='img' src="data:image/<%= post.image[x].contentType%>;base64,<%= post.image[x].data.toString('base64')%>">
                   </div>
+                <% } %>
+
+              </div>
+  
+              <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div> 
+          <% } else if (post.image.length == 1){ %>
+            <img class='img' src="data:image/<%= post.image[0].contentType%>;base64,<%= post.image[0].data.toString('base64')%>">
+          <% } else { %>
+            <img src="/images/emptypic.png" class="img" alt="images">
+          <% } %>
+
+          <p class='para-1 my-3'><%= post.content %></p>
+
+          <div class="like d-flex flex-row justify-content-start my-3">
+            <div class="d-flex flex-row align-self-center mx-3">
+              <form action="/gallery/<%= post._id %>/like" method="POST">
+                <button class="btn btn-primary rounded-0" type="submit">
+                  <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
+                  </svg>
+                </button>
+              </form>
+            </div>
+            <div class="d-flex flex-row align-self-center mx-3">
+              <p class='m-0'><%= post.like %> likes</p>
+            </div> 
+          </div>
+
+          <div class="d-flex flex-row justify-content-end">
+            <a class='btn btn-primary rounded-0' href='/gallery/<%= post._id %>/edit'>Edit Post</a>
+            <button type="button" class="btn btn-danger rounded-0" data-toggle="modal" data-target="#exampleModal">
+              Delete
+            </button>
+          </div>
+
+          <!-- Modal -->
+          <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Delete post</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  Are you sure to delete this post?
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  <form action="/gallery/<%= post._id %>?_method=DELETE" method="POST">
+                    <button class="btn btn-danger rounded-0">Delete Post</button>
+                  </form>
                 </div>
               </div>
-            <% }); %>
-          <% } else { %>
-            <div class="notfound my-3 my-lg-5">
-              <img src="/images/frown.png" alt="frown" class='img1'>
-              <h1 class='text-center'>There are still no posts yet</h1>
             </div>
-          <% } %>
-          
+          </div>
+
+
         </div>
       </div>
     </main>
@@ -198,10 +218,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-    <script>
-      $('.carousel').carousel({
-        interval: 3000
-      })
-    </script>
+
   </body>
 </html>
