--- a/views/gallery/edit.ejs
+++ b/views/gallery/edit.ejs
@@ -114,36 +114,22 @@
     </main>
 
     <footer>
-      <div class="container-fluid footer">
-        <div class="row justify-content-between align-items-start">
-          <div class="col-12 col-lg-8 order-2 order-lg-1 my-2 text-center">
-            <h4>Contact Us!</h4>
-            <div class="mb-2">
-              <a href='/'>
-                <img src="/images/ig.png" alt="ig">
-              </a>
-              <a href='/'>
-                <img src="/images/fb.png" alt="ig">
-              </a>
-            </div>
-            <p class='param-footer'>Designed and built with all the love in the world by Farand from the Wayang Windu KKN team and with the help of our contributors. All right reserved. Pangalengan</p>
-            <div class="my-2">
-              <img src="/images/ugm.png" alt="ugm" class='sponsor-img'>
-              <img src="/images/kkn-ppm.png" alt="kkn-ppm" class='sponsor-img'>
-              <img src="/images/ww.png" alt="ww" class='sponsor-img'>
-              <img src="/images/se.png" alt="se" class='sponsor-img'>
-              <img src="/images/geothermal.png" alt="geothermal" class='sponsor-img'>
-            </div>
-          </div>
-          <div class="col-12 col-lg-4 order-1 order-lg-2 pb-1 justify-content-end">
-            <h4>Our Location</h4>
-            <div class="mapouter">
-              <div class="gmap_canvas">
-                <iframe width="350" height="250" id="gmap_canvas" src="https://maps.google.com/maps?q=pangalengan%20indonesia&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
-                </iframe>
-              </div>
-            </div>
-          </div>
+      <div class="container-fluid footer text-center p-3 p-md-5">
+        <ul class='ul-footer mb-4'>
+          <li><a class='px-2 px-lg-5' href="/">Home</a></li>
+          <li><a class='px-2 px-lg-5' href="/about-us">About Us</a></li>
+          <li><a class='px-2 px-lg-5' href="/activity">Activity</a></li>
+          <li><a class='px-2 px-lg-5' href="/documentation">Documentation</a></li>
+        </ul>
+        
+        <p class='param-footer'>Designed and built with all the love in the world by Farand from the Wayang Windu KKN team and with the help of our contributors.</p>
+        <p class='param-footer1'>All right reserved. Beautiful Pangalengan.</p>
+        <div class="my-2">
+          <img src="https://res.cloudinary.com/djiahwrki/image/upload/v1594617816/images/ugm_rvgujo.png" alt="ugm" class='sponsor-img'>
+          <img src="https://res.cloudinary.com/djiahwrki/image/upload/v1594617819/images/kkn-ppm_jsxtu7.png" alt="kkn-ppm" class='sponsor-img'>
+          <img src="https://res.cloudinary.com/djiahwrki/image/upload/v1594617815/images/ww_czmtk7.png" alt="ww" class='sponsor-img'>
+          <img src="https://res.cloudinary.com/djiahwrki/image/upload/v1594617816/images/se_dn4xws.png" alt="se" class='sponsor-img'>
+          <img src="https://res.cloudinary.com/djiahwrki/image/upload/v1594617864/images/geothermal_aqdzuw.png" alt="geothermal" class='sponsor-img'>
         </div>
 
       </div>
@@ -154,32 +140,5 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-
-    <script>
-      let input = document.getElementById( 'customFile' );
-      let infoArea = document.getElementById( 'customLabel' );
-
-      input.addEventListener( 'change', showFileName );
-
-      function showFileName( event ) {
-        
-        // the change event gives us the input it occurred in 
-        let input = event.srcElement;
-        
-        // the input has an array of files in the `files` property, each one has a name that you can use. We're just using the name here.
-        let fileName = [];
-        for (let x=0;x<input.files.length;x++){
-          fileName.push(input.files[x].name);
-        }
-        
-        // use fileName however fits your app best, i.e. add it into a div
-        infoArea.textContent = fileName.join(', ')
-
-        //alert when file more than 4
-        if(input.files.length>4){
-          alert('You can only upload a maximum of 4 images')
-        }
-      }
-    </script>
   </body>
 </html>
