--- a/views/gallery/new.ejs
+++ b/views/gallery/new.ejs
@@ -103,7 +103,7 @@
           <form method="POST" action="/gallery" enctype="multipart/form-data">
 
             <p class='font-weight-bold'>Select image</p>
-            <small class="form-text text-muted">Max 4 images</small>
+            <small class="form-text text-muted">Max 2 images</small>
             <div class="input-group mb-3">
               <div class="custom-file">
                 <input type="file" class="custom-file-input" id="customFile" accept="image/*" name="image" multiple required>
@@ -123,36 +123,22 @@
     </main>
 
     <footer>
-      <div class="container-fluid footer">
-        <div class="row justify-content-between align-items-start">
-          <div class="col-12 col-lg-8 order-2 order-lg-1 my-2 text-center">
-            <h4>Contact Us!</h4>
-            <div class="mb-2">
-              <a href='/'>
-                <img src="/images/ig.png" alt="ig">
-              </a>
-              <a href='/'>
-                <img src="/images/fb.png" alt="ig">
-              </a>
-            </div>
-            <p class='param-footer'>Designed and built with all the love in the world by Farand from the Wayang Windu KKN team and with the help of our contributors. All right reserved. Pangalengan</p>
-            <div class="my-2">
-              <img src="/images/ugm.png" alt="ugm" class='sponsor-img'>
-              <img src="/images/kkn-ppm.png" alt="kkn-ppm" class='sponsor-img'>
-              <img src="/images/ww.png" alt="ww" class='sponsor-img'>
-              <img src="/images/se.png" alt="se" class='sponsor-img'>
-              <img src="/images/geothermal.png" alt="geothermal" class='sponsor-img'>
-            </div>
-          </div>
-          <div class="col-12 col-lg-4 order-1 order-lg-2 pb-1 justify-content-end">
-            <h4>Our Location</h4>
-            <div class="mapouter">
-              <div class="gmap_canvas">
-                <iframe width="350" height="250" id="gmap_canvas" src="https://maps.google.com/maps?q=pangalengan%20indonesia&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
-                </iframe>
-              </div>
-            </div>
-          </div>
+      <div class="container-fluid footer text-center p-3 p-md-5">
+        <ul class='ul-footer mb-4'>
+          <li><a class='px-2 px-lg-5' href="/">Home</a></li>
+          <li><a class='px-2 px-lg-5' href="/about-us">About Us</a></li>
+          <li><a class='px-2 px-lg-5' href="/activity">Activity</a></li>
+          <li><a class='px-2 px-lg-5' href="/documentation">Documentation</a></li>
+        </ul>
+        
+        <p class='param-footer'>Designed and built with all the love in the world by Farand from the Wayang Windu KKN team and with the help of our contributors.</p>
+        <p class='param-footer1'>All right reserved. Beautiful Pangalengan.</p>
+        <div class="my-2">
+          <img src="https://res.cloudinary.com/djiahwrki/image/upload/v1594617816/images/ugm_rvgujo.png" alt="ugm" class='sponsor-img'>
+          <img src="https://res.cloudinary.com/djiahwrki/image/upload/v1594617819/images/kkn-ppm_jsxtu7.png" alt="kkn-ppm" class='sponsor-img'>
+          <img src="https://res.cloudinary.com/djiahwrki/image/upload/v1594617815/images/ww_czmtk7.png" alt="ww" class='sponsor-img'>
+          <img src="https://res.cloudinary.com/djiahwrki/image/upload/v1594617816/images/se_dn4xws.png" alt="se" class='sponsor-img'>
+          <img src="https://res.cloudinary.com/djiahwrki/image/upload/v1594617864/images/geothermal_aqdzuw.png" alt="geothermal" class='sponsor-img'>
         </div>
 
       </div>
@@ -185,8 +171,8 @@
         infoArea.textContent = fileName.join(', ')
 
         //alert when file more than 4
-        if(input.files.length>4){
-          alert('You can only upload a maximum of 4 images')
+        if(input.files.length>2){
+          alert('You can only upload a maximum of 2 images')
         }
       }
     </script>
