--- a/public/styles/tourist/index.css
+++ b/public/styles/tourist/index.css
@@ -108,6 +108,16 @@ body {
 	margin-bottom: 0;
 }
 
+.section-1 .author {
+	font-size: 14px;
+	font-family: Ubuntu, sans-serif;
+	color: #b6b6b6;
+}
+
+.section-1 .author .username {
+	text-transform: capitalize;
+}
+
 @media screen and (max-width: 700px) {
 	.section-1 #myBtn {
 		bottom: 20px;
