--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -115,6 +115,10 @@
                   <label for="passwordReg">Password</label>
                   <input id="passwordReg" type="password" class="form-control" name="password" placeholder="Password" required>
               </div>
+              <div class="form-group">
+                <label for="secretReg">Secret Code</label>
+                <input id="secretReg" type="text" class="form-control" name="secret" placeholder="Secret Code" required>
+            </div>
               <a href="/login" class='para-1'>Already Have an ID?</a>
               <div class="d-flex flex-row justify-content-end py-2">
                 <button type="submit" class="btn btn-primary">Register</button>
